Update Readme to reflect setting up Argo in a development environment